fix get resume button, change background to solid color making contrast better

--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,6 @@
 body {
     background-color: #111821;
     font-family: sans-serif;
-    background-image: url(https://cdn.mos.cms.futurecdn.net/HuGGeENt6kGyixe3hT9tnY.jpg);
-    background-size: contain;
-    /*background-repeat: repeat-y;
-    min-height: 50px;*/
-    background-attachment: fixed;
 }
 
 .nav-bar {
@@ -62,11 +57,10 @@ body {
 }
 
 .resumeButton {
-   margin-top: 15px;
+    margin-top:15px;
+   padding: 10px;
    transition: all 0.3s ease;
-   padding: 1.5rem;
-   margin-bottom: 2rem;
-   background-color: white;
+   display:inline-block;
 }
 
 .resumeButton a {
@@ -90,6 +84,7 @@ body {
     border-radius: 10px;
     width: 200px;
     margin-top: 10px;
+    display: block;
 }
 
 .headings {
